// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RangeField > renders correctly 1`] = `
<div class="vd-range-field">
  <div class="d-flex flex-wrap max-width-none ma-n3">
    <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-text-field ma-3">
      <!---->
      <div class="v-input__control">
        <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
              <!---->
              <div class="v-progress-linear__background" style="width: 100%;"></div>
              <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                <div class="v-progress-linear__indeterminate">
                  <div class="v-progress-linear__indeterminate long"></div>
                  <div class="v-progress-linear__indeterminate short"></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <!---->
          <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
              <!---->Valeur min
            </label><label class="v-label v-field-label" for="input-0">
              <!---->Valeur min
            </label>
            <!----><input size="1" type="number" id="input-0" aria-describedby="input-0-messages" inputmode="numeric" class="v-field__input">
            <!---->
          </div>
          <!---->
          <!---->
          <div class="v-field__outline">
            <!---->
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!---->
    </div>
    <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-text-field ma-3">
      <!---->
      <div class="v-input__control">
        <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
              <!---->
              <div class="v-progress-linear__background" style="width: 100%;"></div>
              <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                <div class="v-progress-linear__indeterminate">
                  <div class="v-progress-linear__indeterminate long"></div>
                  <div class="v-progress-linear__indeterminate short"></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <!---->
          <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-2">
              <!---->Valeur max
            </label><label class="v-label v-field-label" for="input-2">
              <!---->Valeur max
            </label>
            <!----><input size="1" type="number" id="input-2" aria-describedby="input-2-messages" ripple="false" inputmode="numeric" class="v-field__input">
            <!---->
          </div>
          <!---->
          <!---->
          <div class="v-field__outline">
            <!---->
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-slider v-range-slider v-locale--is-ltr align-center mt-2 mb-6">
    <div class="v-input__prepend">
      <!---->0
      <!---->
    </div>
    <div class="v-input__control">
      <div class="v-slider__container"><input id="input-4_start" name="input-4" tabindex="-1"><input id="input-4_stop" name="input-4" tabindex="-1">
        <div class="v-slider-track" style="--v-slider-track-size: 4px; --v-slider-tick-size: 2px;">
          <div class="v-slider-track__background bg-primary v-slider-track__background--opacity" style="inset-inline-start: 0%; width: 100%;"></div>
          <div class="v-slider-track__fill bg-primary" style="inset-inline-start: 50%; width: 30%;"></div>
          <!---->
        </div>
        <div class="v-slider-thumb v-slider-thumb--focused v-locale--is-ltr" style="--v-slider-thumb-position: 50%; --v-slider-thumb-size: 20px;" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="80" aria-valuenow="50" aria-readonly="false" aria-orientation="horizontal" aria-describedby="input-4-messages">
          <div class="v-slider-thumb__surface text-primary elevation-2"></div>
          <div class="v-slider-thumb__ripple text-primary"></div>
          <transition-stub name="scale-transition" appear="false" persisted="false" css="true">
            <div class="v-slider-thumb__label-container" style="display: none;">
              <div class="v-slider-thumb__label">
                <div>50.0</div>
              </div>
            </div>
          </transition-stub>
        </div>
        <div class="v-slider-thumb v-slider-thumb--focused v-locale--is-ltr" style="--v-slider-thumb-position: 80%; --v-slider-thumb-size: 20px;" role="slider" tabindex="0" aria-valuemin="50" aria-valuemax="100" aria-valuenow="80" aria-readonly="false" aria-orientation="horizontal" aria-describedby="input-4-messages">
          <div class="v-slider-thumb__surface text-primary elevation-2"></div>
          <div class="v-slider-thumb__ripple text-primary"></div>
          <transition-stub name="scale-transition" appear="false" persisted="false" css="true">
            <div class="v-slider-thumb__label-container" style="display: none;">
              <div class="v-slider-thumb__label">
                <div>80.0</div>
              </div>
            </div>
          </transition-stub>
        </div>
      </div>
    </div>
    <div class="v-input__append">
      <!---->100
    </div>
    <!---->
  </div>
</div>
`;

exports[`RangeField > renders correctly with outlined prop 1`] = `
<div class="vd-range-field">
  <div class="d-flex flex-wrap max-width-none ma-n3">
    <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-text-field ma-3">
      <!---->
      <div class="v-input__control">
        <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
              <!---->
              <div class="v-progress-linear__background" style="width: 100%;"></div>
              <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                <div class="v-progress-linear__indeterminate">
                  <div class="v-progress-linear__indeterminate long"></div>
                  <div class="v-progress-linear__indeterminate short"></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <!---->
          <div class="v-field__field" data-no-activator="">
            <!----><label class="v-label v-field-label" for="input-0">
              <!---->Valeur min
            </label>
            <!----><input size="1" type="number" id="input-0" aria-describedby="input-0-messages" inputmode="numeric" class="v-field__input">
            <!---->
          </div>
          <!---->
          <!---->
          <div class="v-field__outline">
            <div class="v-field__outline__start"></div>
            <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                <!---->Valeur min
              </label></div>
            <div class="v-field__outline__end"></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!---->
    </div>
    <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-text-field ma-3">
      <!---->
      <div class="v-input__control">
        <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
              <!---->
              <div class="v-progress-linear__background" style="width: 100%;"></div>
              <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                <div class="v-progress-linear__indeterminate">
                  <div class="v-progress-linear__indeterminate long"></div>
                  <div class="v-progress-linear__indeterminate short"></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <!---->
          <div class="v-field__field" data-no-activator="">
            <!----><label class="v-label v-field-label" for="input-2">
              <!---->Valeur max
            </label>
            <!----><input size="1" type="number" id="input-2" aria-describedby="input-2-messages" ripple="false" inputmode="numeric" class="v-field__input">
            <!---->
          </div>
          <!---->
          <!---->
          <div class="v-field__outline">
            <div class="v-field__outline__start"></div>
            <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-2">
                <!---->Valeur max
              </label></div>
            <div class="v-field__outline__end"></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-slider v-range-slider v-locale--is-ltr align-center mt-2 mb-6">
    <div class="v-input__prepend">
      <!---->0
      <!---->
    </div>
    <div class="v-input__control">
      <div class="v-slider__container"><input id="input-4_start" name="input-4" tabindex="-1"><input id="input-4_stop" name="input-4" tabindex="-1">
        <div class="v-slider-track" style="--v-slider-track-size: 4px; --v-slider-tick-size: 2px;">
          <div class="v-slider-track__background bg-primary v-slider-track__background--opacity" style="inset-inline-start: 0%; width: 100%;"></div>
          <div class="v-slider-track__fill bg-primary" style="inset-inline-start: 100%; width: 0%;"></div>
          <!---->
        </div>
        <div class="v-slider-thumb v-slider-thumb--focused v-locale--is-ltr" style="--v-slider-thumb-position: 100%; --v-slider-thumb-size: 20px;" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="80" aria-valuenow="50" aria-readonly="false" aria-orientation="horizontal" aria-describedby="input-4-messages">
          <div class="v-slider-thumb__surface text-primary elevation-2"></div>
          <div class="v-slider-thumb__ripple text-primary"></div>
          <transition-stub name="scale-transition" appear="false" persisted="false" css="true">
            <div class="v-slider-thumb__label-container" style="display: none;">
              <div class="v-slider-thumb__label">
                <div>50.0</div>
              </div>
            </div>
          </transition-stub>
        </div>
        <div class="v-slider-thumb v-slider-thumb--focused v-locale--is-ltr" style="--v-slider-thumb-position: 100%; --v-slider-thumb-size: 20px;" role="slider" tabindex="0" aria-valuemin="50" aria-valuemax="0" aria-valuenow="80" aria-readonly="false" aria-orientation="horizontal" aria-describedby="input-4-messages">
          <div class="v-slider-thumb__surface text-primary elevation-2"></div>
          <div class="v-slider-thumb__ripple text-primary"></div>
          <transition-stub name="scale-transition" appear="false" persisted="false" css="true">
            <div class="v-slider-thumb__label-container" style="display: none;">
              <div class="v-slider-thumb__label">
                <div>80.0</div>
              </div>
            </div>
          </transition-stub>
        </div>
      </div>
    </div>
    <div class="v-input__append">
      <!---->0
    </div>
    <!---->
  </div>
</div>
`;
